# fastapi-crud

./: .env  .gitignore  alembic.ini  command.py  pyproject.toml
fastapi_crud/: config.py  database.py  main.py
fastapi_crud/controller/: auth.py
fastapi_crud/middleware/: auth.py
fastapi_crud/model/: user.py
fastapi_crud/router/: auth.py  main.py  user.py
fastapi_crud/schema/: auth.py
fastapi_crud/utils/: password.py  token.py
migrations/: env.py
migrations/versions/: 1d62666ac633_added_user_table.py  5c9436b6b32e_added_user_table.py
