[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["eventer <liamtoddeventer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
alembic = "^1.13.1"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
