[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["eventer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
alembic = "^1.13.2"
aiomysql = "^0.2.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
cryptography = "^42.0.8"

[tool.poetry.scripts]
migrate = "command:migrate"
dev = "command:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
